[project]
name = "junos-exporter"
version = "0.0.12"
description = "Prometheus Exporter for Junos using PyEZ Tables and Views"
authors = [
  {name = "minefuto", email = "minefuto@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncssh>=2.20.0",
    "fastapi>=0.115.8",
    "junos-eznc>=2.7.4",
    "ntc-templates>=7.7.0",
    "pyyaml>=6.0.2",
    "scrapli-netconf>=2025.1.30",
    "uvicorn>=0.34.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/minefuto/junos-exporter.git"

[project.scripts]
junos-exporter = "junos_exporter.__main__:cli"

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "ruff>=0.9.7",
    "ty>=0.0.16",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.hatch.build.targets.wheel.force-include]
"config.yml" = "junos_exporter/config.yml"
"op" = "junos_exporter/op"
"textfsm" = "junos_exporter/textfsm"

[tool.hatch.build.targets.sdist.force-include]
"config.yml" = "junos_exporter/config.yml"
"op" = "junos_exporter/op"
"textfsm" = "junos_exporter/textfsm"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "SIM", "ANN", "FAST"]
ignore = ["E501"]
